# FastAPI_pytest_trial

./: .env  .gitignore  Dockerfile.dev  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
app/: cruds.py  main.py
app/db/: database.py
app/models/: task.py  task_model.py  user.py  user_model.py
app/router/: main_router.py
app/schema/: task.py  task_schema.py  user.py  user_schema.py
migrations/: env.py
migrations/versions/: 24b307d3b7f6_init.py
tests/: conftest.py
