[tool.poetry]
name = "fastapi-pytest-trial"
version = "0.1.0"
description = ""
authors = ["Kentaro Kato <ken.k.jul2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.3"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
