[tool.poetry]
name = "fastapi-pytest-trial"
version = "0.1.0"
description = ""
authors = ["Kentaro Kato <ken.k.jul2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.3"
uvicorn = "^0.29.0"
docker = "^7.0.0"
sqlmodel = "^0.0.18"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
sqlalchemy-stubs = "^0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
